syntax = "proto3";

option go_package = "./grpcexample";

package grpcexample;

service ExampleService {
  rpc Echo(EchoRequest) returns (EchoResponse);
  rpc EchoStream(stream EchoRequest) returns (stream EchoResponse);
}

message EchoRequest {
  string message = 1;
  int32 ID = 2;
};

message EchoResponse {
  string message = 1;
  int32 code = 2;
};

